[tool.poetry]
name = "project-nba"
version = "0.1.0"
description = ""
authors = ["stevencozine <cozineii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "<1.25.0"
pandas = "^2.1.2"
google-cloud-bigquery = "^3.12.0"
apache-beam = {extras = ["gcp"], version = "^2.51.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
